@@ -94,6 +94,8 @@ if prefer :railsapps, 'rails-prelaunch-signup'
     # >-------------------------------[ Routes ]--------------------------------<
     
     copy_from_repo 'config/routes.rb', :repo => repo
+    ### CORRECT APPLICATION NAME ###
+    gsub_file 'config/routes.rb', /^.*.routes.draw do/, "#{app_const}.routes.draw do"
     
     # >-------------------------------[ Assets ]--------------------------------<
     
