@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "2.2.5"
+  VERSION = "2.2.6"
 end
